# Trigui

./: 3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  CMakeListsOld.txt  glad.c  imgui.ini  shaders_class.cpp  trigui.cpp
include/glad/: glad.h
